Etapa de matriz de perfis PRONTA